<resources>
    <string name="app_name">Flash Cards</string>
    <string name="example">Example</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="username_e_mail">Username/E-Mail</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_your_account">Create your account!</string>
    <string name="username">Username</string>
    <string name="e_mail">E-Mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username_can_only_contain_letters_digits_underscores_dashes_and_spaces">Use only alphanumeric, 0–9, _, -, or spaces</string>
    <string name="username_taken">Username taken</string>
    <string name="enter_a_valid_email">Enter a valid email</string>
    <string name="email_taken">Email taken</string>
    <string name="must_have_8_characters_1_lowercase_letter_1_digit">Must have 8 characters, 1 lowercase letter, 1 digit</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="invalid_username_email_or_password">Invalid username, email or password</string>
    <string name="search">Search</string>
    <string name="decks">Decks</string>
    <string name="settings">Settings</string>
    <string name="expandable_buttons">Expandable Buttons</string>
    <string name="expanded_button">Expanded Button</string>
    <string name="stay_signed_in">Stay signed in?</string>
    <string name="stay_logged_in">Stay logged in?</string>
    <string name="check_box">check box</string>
    <string name="cancel_box">cancel box</string>
    <string name="sign_out">Sign out</string>
    <string name="front_text">Front Text</string>
    <string name="back_text">Back Text</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="title">Title</string>
    <string name="create_new_deck">Create New Deck</string>
    <string name="or">Or</string>
    <string name="username_or_email_does_not_exist">Username or email does not exist</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="back_online">Back Online</string>
    <string name="description">Description</string>
    <string name="no_description">No description</string>
    <string name="edit_deck_name">Edit Deck Name</string>
    <string name="new_deck_name">New Deck Name</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="button_name">Button Name</string>
    <string name="name">Name</string>
    <string name="date_added">Date Added</string>
    <string name="last_updated">Last Updated</string>
    <string name="create_new_card">Create New Card</string>
    <string name="edit_card">Edit Card</string>
    <string name="delete_button">delete button</string>
    <string name="this_deck_will_be_deleted_for_ever">this deck will be deleted for ever</string>
    <string name="the_selected_decks_will_be_deleted_forever">The selected decks will be deleted forever</string>
    <string name="user">User</string>
    <string name="log_out">Log out</string>
    <string name="trash_cards">Trash Cards</string>
    <string name="trash_decks">Trash Decks</string>
    <string name="cards">Cards</string>
    <string name="title_activity_deck_trash">DeckTrashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="user_created_successfully">User created successfully</string>
    <string name="failed_to_create_user">Failed to create user</string>
</resources>