<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_rounded_dialog"
    android:layout_gravity="center"
    android:padding="15sp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/create_new_card"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/front_text"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/front_text"
        android:layout_below="@id/title"/>

    <EditText
        android:id="@+id/back_text"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/back_text"
        android:layout_below="@+id/front_text"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/description_optional"
        android:layout_below="@+id/back_text"/>

    <LinearLayout
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/description"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5sp">

        <ImageButton
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="40sp"
            android:layout_marginEnd="5sp"
            android:contentDescription="@string/check_box"
            android:elevation="20sp"
            android:layout_weight="1"
            android:background="@color/app_dark_contrast"
            android:src="@drawable/ic_cross" />

        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="0dp"
            android:layout_height="40sp"
            android:layout_marginStart="5sp"
            android:contentDescription="@string/cancel_box"
            android:layout_weight="1"
            android:elevation="20sp"
            android:background="#1D1D20"
            android:src="@drawable/ic_add_button" />

    </LinearLayout>

</RelativeLayout>
