<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_rounded_dialog"
    android:layout_gravity="center"
    android:paddingTop="25sp">

    <ImageView
        android:id="@+id/titleTextView"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:contentDescription="@string/stay_signed_in"
        android:background="@drawable/ic_delete_forever_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/are_you_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:textSize="23sp"
        android:textColor="@color/white"
        android:layout_below="@id/titleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="9dp" />

    <TextView
        android:id="@+id/confirmation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:maxWidth="250dp"
        android:text="@string/the_selected_decks_will_be_deleted_forever"
        android:textSize="16sp"
        android:layout_below="@id/are_you_sure"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="9dp" />

    <LinearLayout
        android:layout_width="280sp"
        android:layout_height="wrap_content"
        android:paddingStart="12sp"
        android:paddingEnd="12sp"
        android:paddingBottom="12sp"
        android:paddingTop="12sp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/confirmation_text"
        android:layout_marginTop="16dp">

        <ImageButton
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="40sp"
            android:layout_marginEnd="5sp"
            android:contentDescription="@string/check_box"
            android:layout_weight="1"
            android:elevation="20sp"
            android:background="#1D1D20"
            android:src="@drawable/ic_cross" />

        <ImageButton
            android:id="@+id/confirmButton"
            android:layout_width="0dp"
            android:layout_height="40sp"
            android:layout_marginStart="5sp"
            android:contentDescription="@string/cancel_box"
            android:layout_weight="1"
            android:elevation="20sp"
            android:background="#1D1D20"
            android:src="@drawable/ic_check" />
    </LinearLayout>

</RelativeLayout>
