<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_dark">

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:text="@string/create_your_account"
        android:textColor="@color/app_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up" />

    <TextView
        android:id="@+id/usernameST"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginBottom="10sp"
        android:textColor="@color/error_red"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintStart_toStartOf="@+id/username" />

    <EditText
        android:id="@+id/username"
        android:layout_width="320sp"
        android:layout_height="60sp"
        android:layout_marginTop="200sp"
        android:background="@drawable/ic_border"
        android:hint="@string/username"
        android:gravity="center_vertical"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/username_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/error_red"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/username"
        app:layout_constraintTop_toTopOf="@+id/username" />

    <TextView
        android:id="@+id/emailST"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginBottom="10sp"
        android:textColor="#FF2525"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="320sp"
        android:layout_height="60sp"
        android:layout_marginTop="35sp"
        android:background="@drawable/ic_border"
        android:hint="@string/e_mail"
        android:gravity="center_vertical"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <ImageView
        android:id="@+id/email_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:background="@drawable/error_red"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/email"
        app:layout_constraintTop_toTopOf="@+id/email" />

    <TextView
        android:id="@+id/passwordST"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginBottom="10sp"
        android:textColor="#FF2525"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="320sp"
        android:layout_height="60sp"
        android:layout_marginTop="35sp"
        android:background="@drawable/ic_border"
        android:gravity="center_vertical"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <ImageView
        android:id="@+id/password_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:background="@drawable/error_red"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/password"
        app:layout_constraintTop_toTopOf="@+id/password" />

    <TextView
        android:id="@+id/confirmpwST"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginBottom="10sp"
        android:textColor="#FF2525"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/confirm_password"
        app:layout_constraintStart_toStartOf="@+id/confirm_password" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="320sp"
        android:layout_height="60sp"
        android:layout_marginTop="35sp"
        android:background="@drawable/ic_border"
        android:gravity="center_vertical"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ImageView
        android:id="@+id/confirmpw_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:background="@drawable/error_red"
        app:layout_constraintBottom_toBottomOf="@+id/confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/confirm_password"
        app:layout_constraintTop_toTopOf="@+id/confirm_password" />

    <Button
        android:id="@+id/sign_upButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@drawable/ic_rounded_sign_up_in_button"
        android:layout_width="323sp"
        android:layout_height="60sp"
        android:layout_marginTop="30sp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

    <LinearLayout
        android:layout_width="350sp"
        android:layout_height="60sp"
        android:layout_marginTop="15sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_upButton">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/app_gray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>