<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingTop="20dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="5dp"
    android:background="@drawable/ic_rounded_dialog">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scroll_view"/>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/minimize_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_max="500dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_max="350dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="25dp"
                android:paddingEnd="10dp"
                android:paddingBottom="25dp"
                android:scrollbars="vertical"
                android:text="@string/no_description"
                android:textColor="#CCCCCC"
                android:textSize="17sp" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/minimize_button"
        android:layout_width="150dp"
        android:layout_height="40sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_weight="1"
        android:background="@drawable/ic_minimize_button"
        android:contentDescription="@string/cancel_box"
        app:layout_constraintTop_toBottomOf="@id/scroll_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
